--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Expenses Website</title>
-    <link rel="stylesheet" href="/styles.css"/>
+    <link rel="stylesheet" href="/public/styles.css"/>
     <script src="/app.js" defer></script>
 </head>
 </html>
