--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,11 +10,11 @@
 
     <form action="/expenses" method="post">
 
-        <label>Merchant: <input type="text" name="merchant"></label><br><br>
-        <label>Date: <input type="text" name="date"></label><br><br>
-        <label>Price: <input type="text" name="price"></label><br><br>
-        <label>Payment Method: <input type="text" name="paymentMethod"></label><br><br>
-        <label>Category: <input type="text" name="category"></label><br><br>
+        <label>Merchant: <input type="text" name="merchant" placeholder="Chick-fil-A"></label><br><br>
+        <label>Date: <input type="text" name="date" placeholder="mm/dd/yyyy"></label><br><br>
+        <label>Price: $ <input type="text" name="price" ></label><br><br>
+        <label>Payment Method: <input type="text" name="paymentMethod" placeholder="cash or last 4 digits of the card"></label><br><br>
+        <label>Category: <input type="text" name="category" placeholder="Food, drinks, clothes, etc."></label><br><br>
         <label>Notes: <input type="text" name="notes"></label><br><br>
         <label>Requested Refund: <input type="checkbox" name="requestedRefund"></label><br><br>
 
