Update Route set up and Delete Route WIP

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,7 +10,7 @@
     <h1>Expense Show-off</h1>
 
     <!-- Link to our edit page -->
-    <a href="/expenses/edit/<%= expense._id %>/">I want to edit this expense!</a>
+    <a href="/expenses/edit/<%= expense._id %>/"> I want to edit this Expense! </a>
     
     <h2>Merchant: <%= expense.merchant %> </h2>
 
