--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,7 @@
 <nav>
     <a href="/expenses">Expenses Index</a>
     <a href="/expenses/new">Add a new Expense</a>
+    <a href="/user/signup"><button>Signup</button></a>
+    <a href="/user/login"><button>Login</button></a>
+    <a href="/user/logout"><button>Log Out</button></a>
 </nav>
