changed views/user/login.ejs and signup.ejs input type to password

--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -7,8 +7,8 @@
     <%- include("../partials/nav.ejs") %>
 
     <form action="/user/signup" method="post">
-        <label> USERNAME: <input type="text" name="username" required placeholder="type whatever"></label>
-        <label> PASSWORD: <input type="text" name="password" required placeholder="type whatever"></label>
+        <label> USERNAME: <input type="text" name="username" required placeholder="doesn't matter what it is"></label>
+        <label> PASSWORD: <input type="password" name="password" required placeholder="doesn't matter what it is"></label>
 
         <input type="submit" value="Create Account">
     </form>
