--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -8,7 +8,7 @@
 
     <form action="/user/login" method="post">
         <label> USERNAME: <input type="text" name="username" required></label>
-        <label> PASSWORD: <input type="text" name="password" required></label>
+        <label> PASSWORD: <input type="password" name="password" required></label>
 
         <input type="submit" value="Login">
     </form>
