--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,5 @@
 <nav>
-    <a href="/expenses">Expenses Index</a>
-    <a href="/expenses/new">Add a new Expense</a>
-    <a href="/user/signup"><button>Signup</button></a>
-    <a href="/user/login"><button>Login</button></a>
-    <a href="/user/logout"><button>Log Out</button></a>
+    <a href="/expenses"><button>Expenses Page</button><br><br>
+    <a href="/expenses/new"><button>Click here to add a NEW Expense!</button></a><br><br>
+    <a href="/user/logout"><button>Log Out</button></a><br><br>
 </nav>
