--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Expenses Website</title>
-    <link rel="stylesheet" href="/public/styles.css"/>
+    <title>Spender Tracker</title>
+
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic"/>
+
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"/>
+    
+    <!-- CSS and JS -->
     <script src="/app.js" defer></script>
+    <link rel="stylesheet" href="/styles.css">
+    
 </head>
 </html>
