added SpenderTracker app title

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -6,9 +6,9 @@
 <body>
 
     <div class="login-page">
-
         <fieldset id="login-spender">
-
+            <h1> Welcome to SpenderTracker!</h1>
+            <h2> The place to track your Expenses</h2>
             <form action="/user/login" method="post">
                 <label> USERNAME: <input type="text" name="username" required></label><br><br>
                 <label> PASSWORD: <input type="password" name="password" required></label><br><br>
@@ -24,7 +24,7 @@
     <style>
 
         body {
-            margin: 0 auto;
+            margin: 0px auto;
             width: 434px;
         }
 
